# terminator-ai

./: .gitignore  Cargo.toml  README.md  build.rs  session.vim
src/: main.rs  run.c
src/api/: mod.rs
src/config/: configfile.rs  display.rs  flags.rs  mod.rs  schema.json
src/context/: mod.rs
src/utils/: mod.rs
