[package]
name = "terminator"
version = "0.2.0"
edition = "2021"

[build-dependencies]
cc = "1.1.6"
[dependencies]
base64 = "0.22.1"
colored = "2.1.0"
curl = "0.4.46"
dir = "0.1.2"
indicatif = "0.17.8"
rand = "0.8.5"
regex = "1.10.5"
serde = {version = "1.0.204", features = ["derive"]}
serde_json = "1.0.120"
sha256 = "1.5.0"
